<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Webasyst X</string>
    <string name="webasyst">Webasyst</string>
    <string name="no_webasyst_accounts">You don’t have any Webasyst accounts linked to your Webasyst ID.</string>
    <string name="installation_insecure_connection">Insecure connection</string>
    <string name="installation_connection_not_secure">Connection is not secure</string>
    <string name="expires_on">Expires on %s</string>
    <string name="expired_on">Expired on %s</string>
    <string name="app_name_placeholder">My App</string>
    <string name="btn_sign_in">Sign in with Webasyst ID</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="userpic">Userpic</string>
    <string name="signing_in">Signing in…</string>
    <string name="sign_out_failed">Sign out failed:\n%1$s</string>
    <string name="waid_error">Webasyst ID error:\n%1$s</string>
    <string name="err_could_not_connect">Could not connect to %1$s</string>
    <string name="err_app_not_installed">%1$s is not installed on %2$s (API response: app_not_installed).</string>

    <string name="intro_slide_1_title">Hello, World!</string>
    <string name="intro_slide_1_description">Webasyst X is a simple demo app that helps developing native mobile client apps for Webasyst server-side apps. Quickly, easily, with all boring stuff handled out-of-the-box.</string>
    <string name="intro_slide_2_title">REST API</string>
    <string name="intro_slide_2_description">For demo purposes, this app connects to Blog, Site, and Shop-Script APIs. When switching this prototype to work with your custom app API, simply replace the logo and the API scope — and start working your app’s custom flow right away!</string>
    <string name="intro_slide_3_title">Open Source</string>
    <string name="intro_slide_3_description">Webasyst X is an open source project (MIT license). Feel free to use it as a foundation for your custom Webasyst-powered mobile client app or project.</string>
    <string name="intro_welcome_title">Webasyst X</string>
    <string name="intro_welcome_text">To make this screen look great, simply replace the app icon and the app name above with your project credentials, and add an encouraging welcome message.</string>
    <string name="intro_welcome_github_btn">Webasyst X on GitHub</string>
    <string name="intro_btn_sign_in">Sign in with Webasyst ID</string>
    <string name="intro_btn_next">Next</string>
    <string name="intro_welcome_github_repo_url" translatable="false">https://github.com/1312inc/Webasyst-X-Android/</string>

    <string name="sign_in_btn_with_phone_number">Sign in with a phone number</string>
    <string name="sign_in_or">or</string>
    <string name="sign_in_enter_phone_title">Enter your phone number</string>
    <string name="sign_in_enter_phone_subtitle">We’ll send you an authorization code via SMS</string>
    <string name="sign_in_btn_continue">Continue</string>
    <string name="sign_in_err_number_format">Invalid phone number</string>
    <string name="sign_in_enter_code_title">Enter the code</string>
    <string name="sign_in_enter_code_sent_phone">The code has been sent as an SMS to</string>
    <string name="sign_in_code">Code</string>
    <string name="sign_in_code_not_received">No message received?</string>
    <string name="sign_in_code_sent">The code has been sent</string>
    <string name="sign_in_code_send_again_time">Resend the code will be possible in %1$s s</string>
    <string name="sign_in_err_code_invalid">Invalid code</string>
    <string name="sign_in_btn_send_again">Send again</string>

    <string name="add_webasyst">Add Webasyst</string>
    <string name="btn_add_webasyst">Add account</string>
    <string name="add_webasyst_title">Add account</string>
    <string name="add_webasyst_title_existing_user">I’m using Webasyst already</string>
    <string name="add_webasyst_existing_user">If you don’t see your existing Webasyst account (website) in this app, it is likely that the account simply isn’t connected to your Webasyst ID. Head on to Webasyst backend on your domain using a web browser > go to Settings app > Webasyst ID > Enable Webasyst ID and link your personal account with just few clicks. Then simply restart this app.</string>
    <string name="add_webasyst_btn_existing_user_help">How to link my Webasyst ID</string>
    <string name="add_webasyst_title_new_user">I’m a new user</string>
    <string name="add_webasyst_new_user">Either download Webasyst source code and install it on your own hosting (server) or create a new account instantly in the Webasyst Cloud with just a tap — right now.</string>
    <string name="add_webasyst_error">Cloud signup failed:\n%1$s</string>
    <string name="add_webasyst_error_limit_exceeded">Sorry, we cannot create another account for you at the moment. Most likely, a limit on the number of free Webasyst cloud accounts has been exceeded.</string>
    <string name="btn_create_new_account">Create Webasyst account</string>
    <string name="create_new_account_30_days_free">30 days free</string>
    <string name="webasyst_added">Webasyst cloud account has been created. You can access it by opening this one-time auth url: %1$s</string>
    <string name="btn_open_wa_auth">Open in browser</string>
    <string name="add_webasyst_new_user_help_url">https://www.webasyst.com/webasyst-id-how-to/</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_refresh">Refresh</string>

    <string name="app_site">Site</string>
    <string name="data_fetch_error">Failed to fetch data.\n%1$s</string>
    <string name="btn_error_details_malformed_response">See the full server response</string>
    <string name="error_details_title_response_body">Server response</string>

    <string name="app_shop">Store</string>

    <string name="app_blog">Blog</string>
    <string name="app_blog_no_posts">No posts</string>
    <string name="app_blog_article_list_signature">%1$s, %2$te %2$tB %2$tI:%2$tM %2$Tp</string>

    <string name="empty_api_response">The %1$s app returned no records (API: %2$s).</string>

    <string name="app_redirect_scheme" translatable="false">com.webasyst.x</string>

    <string name="generic_error_retry_later">An error occurred. Please try again later.</string>
</resources>
