<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="?screenPaddingHorizontal"
        android:paddingTop="16dp"
        android:paddingRight="?screenPaddingHorizontal">

        <TextView
            android:id="@+id/title"
            style="@style/Theme.WebasystX.TextAppearance.IntroTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/intro_slide_3_title"
            android:textColor="?colorOnSurfaceHighEmphasis"
            app:layout_constraintBottom_toTopOf="@+id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="2" />

        <ImageView
            android:id="@+id/image"
            style="@style/AppIntroDefaultImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_weight="5"
            app:srcCompat="@drawable/img_open_source" />

        <TextView
            android:id="@+id/description"
            style="@style/Theme.WebasystX.TextAppearance.IntroDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:text="@string/intro_slide_3_description"
            android:textAppearance="@style/Theme.WebasystX.TextAppearance.Body1"
            android:textColor="?colorOnSurfaceHighEmphasis"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintVertical_weight="3" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/appintro2_bottombar_height"
            android:text="@string/intro_welcome_github_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
